<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.PlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_songs"
            style="@style/navBarStyle"
            android:text="@string/songs" />

        <TextView
            android:id="@+id/tv_playlist"
            style="@style/navBarStyle"
            android:text="@string/playlist" />

        <TextView
            android:id="@+id/tv_albums"
            style="@style/navBarStyle"
            android:text="@string/albums" />

        <TextView
            android:id="@+id/tv_artists"
            style="@style/navBarStyle"
            android:text="@string/artists" />

        <TextView
            android:id="@+id/tv_payment"
            style="@style/navBarStyle"
            android:text="@string/payment" />
    </LinearLayout>

    <TextView
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlistActivityDescription" />

    <TextView
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlistName1" />

    <TextView
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlistName2" />

</LinearLayout>
