<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_songs"
        android:text="@string/songs"
        style="@style/navBarStyle"/>

    <TextView
        android:id="@+id/tv_playlist"
        android:text="@string/playlist"
        style="@style/navBarStyle"/>

    <TextView
        android:id="@+id/tv_albums"
        android:text="@string/albums"
        style="@style/navBarStyle"/>

    <TextView
        android:id="@+id/tv_artists"
        android:text="@string/artists"
        style="@style/navBarStyle"/>
    <TextView
        android:id="@+id/tv_payment"
        android:text="@string/payment"
        style="@style/navBarStyle" />

        </LinearLayout>

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/IntoductionMainPage"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25sp"/>


</LinearLayout>
